# national-parks-kids-books

./: .gitignore  README.md  pyproject.toml
src/common/: config.py  constants.py  image_gen.py  research.py
src/common/book_content_crew/: content_creation_crew.py
src/common/book_content_crew/config/: agents.yaml  tasks.yaml
src/common/book_content_flow/: content_crew_flow.py
src/common/book_content_graph/: content_graph.py  content_nodes.py  content_prompts.py  content_states.py
src/national-parks-kids-books/: gen_content_crewai_flow.py  main.py
src/scripts/: generate_book_text.py  generate_illustrations.py  research_park.py
